Optimize chat message delivery and use entity scheduler